[gd_scene load_steps=5 format=2]

[ext_resource path="res://component/login/login.gd" type="Script" id=1]
[ext_resource path="res://common_res/font_normal_30.tres" type="DynamicFont" id=2]
[ext_resource path="res://component/popup/alert.tscn" type="PackedScene" id=3]
[ext_resource path="res://component/avatar_editor/avatar_list.tscn" type="PackedScene" id=4]

[node name="login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
main_scene = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 164.0
margin_top = 1097.0
margin_right = 1076.0
margin_bottom = 1535.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 912.0
margin_bottom = 230.0
custom_constants/vseparation = 30
custom_constants/hseparation = 40
columns = 2

[node name="Label_account" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 6.0
margin_right = 272.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 2 )
text = "Account"

[node name="TextEdit_account" type="TextEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 312.0
margin_right = 912.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 100 )
custom_fonts/font = ExtResource( 2 )

[node name="Label_pw" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 136.0
margin_right = 272.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 2 )
text = "Password"

[node name="TextEdit_pw" type="TextEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 312.0
margin_top = 130.0
margin_right = 912.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 912.0
margin_bottom = 334.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 912.0
margin_bottom = 438.0

[node name="Button_reg" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 77.0
margin_right = 377.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "REGIST"

[node name="Button_login" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 485.0
margin_right = 885.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "LOGIN"

[node name="alert" parent="." instance=ExtResource( 3 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_down" from="CenterContainer/VBoxContainer/HBoxContainer/Button_reg" to="." method="_on_Button_reg_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/HBoxContainer/Button_login" to="." method="_on_Button_login_button_down"]
